Rename c style to cls

--- a/.seedignore
+++ b/.seedignore
@@ -20,6 +20,8 @@ src/resources/css/*
 ?src/index.js
 ?src/resources/*
 ?src/settings/*
+!src/seed/api.js
+!src/seed/graphql.js
 !.keep
 !.gitignore
 !*helpers
