--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "devDependencies": {
     "@material-ui/core": "4.3.3",
+    "@apollo/react-hooks": "3.1.0",
+    "apollo-boost": "0.4.4",
+    "apollo-cache-inmemory": "1.6.3",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "cross-fetch": "3.0.4",
     "datatables.net": "1.10.19",
     "extract-text-webpack-plugin": "3.0.2",
     "formik": "1.5.8",
+    "graphql": "14.5.4",
     "jquery": "3.4.1",
     "node-sass-chokidar": "1.3.5",
     "npm-run-all": "4.1.5",
