Update security settings

--- a/bin/https-instance.config
+++ b/bin/https-instance.config
@@ -53,7 +53,7 @@ files:
 container_commands:
 # installs certbot
   10_stop_apache:
-    command: "killall httpd ; sleep 3"
+    command: "sudo killall httpd ; sleep 3"
   10_replace_placeholders:
     command: |
       SED_EXPRESSION='s/HTTPS_DOMAIN/'$HTTPS_DOMAIN'/g'
