--- a/SeedManifest.json
+++ b/SeedManifest.json
@@ -19,6 +19,7 @@
             "League",
             "Cup"
           ],
+          "description": "Match type (eg. cup)",
           "read": true,
           "write": true,
           "empty": false
@@ -63,6 +64,7 @@
           "delete": "CASCADE"
         }
       ],
+      "description": "Represents a match between two teams  (A vs B)",
       "read": true,
       "write": true,
       "empty": false
@@ -90,6 +92,7 @@
           "name": "is_active",
           "type": "boolean",
           "default": "true",
+          "description": "Indicates whether the player is active or retired",
           "read": true,
           "write": true,
           "empty": false
@@ -108,8 +111,8 @@
           "delete": "CASCADE"
         },
         {
-          "name": "type",
-          "type": "player_type",
+          "name": "position",
+          "type": "player_position",
           "is_fk": true,
           "card": {
             "ref": "1",
@@ -126,7 +129,7 @@
       "empty": false
     },
     {
-      "name": "player_type",
+      "name": "player_position",
       "attrs": [
         {
           "name": "name",
@@ -137,6 +140,7 @@
           "empty": false
         }
       ],
+      "description": "Represents a player  position (eg. forward)",
       "read": true,
       "write": true,
       "empty": false
@@ -147,6 +151,7 @@
         {
           "name": "min",
           "type": "int",
+          "description": "Minute of the goal",
           "read": true,
           "write": true,
           "empty": false
@@ -159,6 +164,7 @@
             "ref": "1",
             "has": "0..*"
           },
+          "description": "Player that score",
           "read": true,
           "write": true,
           "empty": false,
@@ -178,6 +184,7 @@
           "delete": "CASCADE"
         }
       ],
+      "description": "Represents a match score (goal)",
       "read": true,
       "write": true,
       "empty": false
@@ -212,6 +219,7 @@
         {
           "name": "market_value",
           "type": "float",
+          "description": "Market value of the team in USD",
           "read": true,
           "write": true,
           "empty": false
@@ -225,6 +233,7 @@
             "has": "0..*"
           },
           "empty": true,
+          "description": "Team's biggest rival",
           "read": true,
           "write": true,
           "delete": "CASCADE"
@@ -233,6 +242,7 @@
           "name": "identity_docs",
           "type": "file[]",
           "write": false,
+          "description": "Documents to indentify the team (constitutive act, registration, etc.)",
           "read": true,
           "empty": false
         },
@@ -245,6 +255,7 @@
             "has": "1"
           },
           "write": false,
+          "description": "Players of the team (roaster)",
           "read": true,
           "empty": false,
           "delete": "CASCADE"
@@ -266,11 +277,13 @@
             "has": "0..*"
           },
           "write": true,
+          "description": "User team preferences",
           "read": true,
           "empty": false,
           "delete": "CASCADE"
         }
       ],
+      "description": "Represents a registered user",
       "read": true,
       "write": true,
       "empty": false
@@ -291,11 +304,13 @@
               "has": "0..*"
             },
             "write": true,
+            "description": "User team preferences",
             "read": true,
             "empty": false,
             "delete": "CASCADE"
           }
         ],
+        "description": "Represents a registered user",
         "read": true,
         "write": true,
         "empty": false
@@ -330,6 +345,7 @@
           {
             "name": "market_value",
             "type": "float",
+            "description": "Market value of the team in USD",
             "read": true,
             "write": true,
             "empty": false
@@ -343,6 +359,7 @@
               "has": "0..*"
             },
             "empty": true,
+            "description": "Team's biggest rival",
             "read": true,
             "write": true,
             "delete": "CASCADE"
@@ -351,6 +368,7 @@
             "name": "identity_docs",
             "type": "file[]",
             "write": false,
+            "description": "Documents to indentify the team (constitutive act, registration, etc.)",
             "read": true,
             "empty": false
           },
@@ -363,6 +381,7 @@
               "has": "1"
             },
             "write": false,
+            "description": "Players of the team (roaster)",
             "read": true,
             "empty": false,
             "delete": "CASCADE"
@@ -395,6 +414,7 @@
             "name": "is_active",
             "type": "boolean",
             "default": "true",
+            "description": "Indicates whether the player is active or retired",
             "read": true,
             "write": true,
             "empty": false
@@ -413,8 +433,8 @@
             "delete": "CASCADE"
           },
           {
-            "name": "type",
-            "type": "player_type",
+            "name": "position",
+            "type": "player_position",
             "is_fk": true,
             "card": {
               "ref": "1",
@@ -449,6 +469,7 @@
               "League",
               "Cup"
             ],
+            "description": "Match type (eg. cup)",
             "read": true,
             "write": true,
             "empty": false
@@ -493,6 +514,7 @@
             "delete": "CASCADE"
           }
         ],
+        "description": "Represents a match between two teams  (A vs B)",
         "read": true,
         "write": true,
         "empty": false
@@ -503,6 +525,7 @@
           {
             "name": "min",
             "type": "int",
+            "description": "Minute of the goal",
             "read": true,
             "write": true,
             "empty": false
@@ -515,6 +538,7 @@
               "ref": "1",
               "has": "0..*"
             },
+            "description": "Player that score",
             "read": true,
             "write": true,
             "empty": false,
@@ -534,12 +558,13 @@
             "delete": "CASCADE"
           }
         ],
+        "description": "Represents a match score (goal)",
         "read": true,
         "write": true,
         "empty": false
       },
       {
-        "name": "player_type",
+        "name": "player_position",
         "attrs": [
           {
             "name": "name",
@@ -550,6 +575,7 @@
             "empty": false
           }
         ],
+        "description": "Represents a player  position (eg. forward)",
         "read": true,
         "write": true,
         "empty": false
@@ -568,11 +594,13 @@
               "has": "0..*"
             },
             "write": true,
+            "description": "User team preferences",
             "read": true,
             "empty": false,
             "delete": "CASCADE"
           }
         ],
+        "description": "Represents a registered user",
         "read": true,
         "write": true,
         "empty": false
@@ -607,6 +635,7 @@
           {
             "name": "market_value",
             "type": "float",
+            "description": "Market value of the team in USD",
             "read": true,
             "write": true,
             "empty": false
@@ -620,6 +649,7 @@
               "has": "0..*"
             },
             "empty": true,
+            "description": "Team's biggest rival",
             "read": true,
             "write": true,
             "delete": "CASCADE"
@@ -628,6 +658,7 @@
             "name": "identity_docs",
             "type": "file[]",
             "write": false,
+            "description": "Documents to indentify the team (constitutive act, registration, etc.)",
             "read": true,
             "empty": false
           },
@@ -640,6 +671,7 @@
               "has": "1"
             },
             "write": false,
+            "description": "Players of the team (roaster)",
             "read": true,
             "empty": false,
             "delete": "CASCADE"
@@ -672,6 +704,7 @@
             "name": "is_active",
             "type": "boolean",
             "default": "true",
+            "description": "Indicates whether the player is active or retired",
             "read": true,
             "write": true,
             "empty": false
@@ -690,8 +723,8 @@
             "delete": "CASCADE"
           },
           {
-            "name": "type",
-            "type": "player_type",
+            "name": "position",
+            "type": "player_position",
             "is_fk": true,
             "card": {
               "ref": "1",
@@ -726,6 +759,7 @@
               "League",
               "Cup"
             ],
+            "description": "Match type (eg. cup)",
             "read": true,
             "write": true,
             "empty": false
@@ -770,6 +804,7 @@
             "delete": "CASCADE"
           }
         ],
+        "description": "Represents a match between two teams  (A vs B)",
         "read": true,
         "write": true,
         "empty": false
@@ -780,6 +815,7 @@
           {
             "name": "min",
             "type": "int",
+            "description": "Minute of the goal",
             "read": true,
             "write": true,
             "empty": false
@@ -792,6 +828,7 @@
               "ref": "1",
               "has": "0..*"
             },
+            "description": "Player that score",
             "read": true,
             "write": true,
             "empty": false,
@@ -811,12 +848,13 @@
             "delete": "CASCADE"
           }
         ],
+        "description": "Represents a match score (goal)",
         "read": true,
         "write": true,
         "empty": false
       },
       {
-        "name": "player_type",
+        "name": "player_position",
         "attrs": [
           {
             "name": "name",
@@ -827,6 +865,7 @@
             "empty": false
           }
         ],
+        "description": "Represents a player  position (eg. forward)",
         "read": true,
         "write": true,
         "empty": false
