:chart_with_upwards_trend: Add analytics support

--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
     "serve-favicon": "2.5.0"
   },
   "devDependencies": {
-    "@material-ui/core": "4.4.2",
-    "@apollo/react-hooks": "3.1.1",
+     "@apollo/react-hooks": "3.1.3",
+    "@material-ui/core": "4.6.1",
     "apollo-boost": "0.4.4",
     "apollo-cache-inmemory": "1.6.3",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "cross-fetch": "3.0.4",
-    "datatables.net": "1.10.19",
-    "extract-text-webpack-plugin": "3.0.2",
-    "formik": "1.5.8",
-    "graphql": "14.5.6",
+    "datatables.net": "1.10.20",
+    "formik": "2.0.4",
+    "graphql": "14.5.8",
     "jquery": "3.4.1",
-    "node-sass-chokidar": "1.3.5",
+    "node-sass-chokidar": "1.4.0",
     "npm-run-all": "4.1.5",
-    "react": "16.9.0",
-    "react-bootstrap": "1.0.0-beta.12",
+    "react": "16.11.0",
+    "react-bootstrap": "1.0.0-beta.14",
     "react-css-modules": "4.7.11",
-    "react-dom": "16.9.0",
-    "react-fetch-hook": "1.6.4",
+    "react-dom": "16.11.0",
+    "react-fetch-hook": "1.7.1",
+    "react-ga": "2.7.0",
     "react-load-script": "0.0.6",
     "react-popup": "0.10.0",
-    "react-redux": "7.1.1",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
-    "react-scripts": "3.1.2",
+    "react-redux": "7.1.3",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.2.0",
     "react-scripts-cssmodules": "1.1.50",
-    "react-svg": "10.0.21",
+    "react-svg": "10.0.23",
     "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0"
