--- a/package.json
+++ b/package.json
@@ -7,38 +7,38 @@
     "debug": "4.1.1",
     "express": "4.17.1",
     "log": "6.0.0",
-    "morgan": "1.9.1",
+    "morgan": "1.10.0",
     "serve-favicon": "2.5.0"
   },
   "devDependencies": {
-    "@apollo/react-hooks": "3.1.3",
-    "@material-ui/core": "4.6.1",
-    "apollo-boost": "0.4.4",
-    "apollo-cache-inmemory": "1.6.3",
-    "bootstrap": "4.3.1",
+    "@apollo/react-hooks": "3.1.5",
+    "@material-ui/core": "4.9.13",
+    "apollo-boost": "0.4.8",
+    "apollo-cache-inmemory": "1.6.6",
+    "bootstrap": "4.4.1",
     "classnames": "2.2.6",
     "cross-fetch": "3.0.4",
     "datatables.net": "1.10.20",
-    "formik": "2.0.4",
-    "graphql": "14.5.8",
-    "jquery": "3.4.1",
+    "formik": "2.1.4",
+    "graphql": "15.0.0",
+    "jquery": "3.5.1",
     "node-sass-chokidar": "1.4.0",
     "npm-run-all": "4.1.5",
-    "react": "16.11.0",
-    "react-bootstrap": "1.0.0-beta.14",
+    "react": "16.13.1",
+    "react-bootstrap": "1.0.1",
     "react-css-modules": "4.7.11",
-    "react-dom": "16.11.0",
-    "react-fetch-hook": "1.7.1",
+    "react-dom": "16.13.1",
+    "react-fetch-hook": "1.8.3",
     "react-ga": "2.7.0",
     "react-load-script": "0.0.6",
     "react-popup": "0.10.0",
-    "react-redux": "7.1.3",
+    "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.4.1",
     "react-scripts-cssmodules": "1.1.50",
-    "react-svg": "10.0.23",
-    "redux": "4.0.4",
+    "react-svg": "11.0.21",
+    "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0"
   },
