--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass-chokidar": "1.4.0",
     "npm-run-all": "4.1.5",
     "react": "16.13.1",
+    "react-app-polyfill": "1.0.6",
     "react-bootstrap": "1.0.1",
     "react-css-modules": "4.7.11",
     "react-dom": "16.13.1",
@@ -57,7 +58,7 @@
   },
   "browserslist": [
     ">0.2%",
-    "not ie <= 11",
+    "not ie < 9",
     "not op_mini all"
   ]
 }
