--- a/bin/aws-eb/config/https-instance.config
+++ b/bin/aws-eb/config/https-instance.config
@@ -26,8 +26,8 @@ files:
         </Proxy>
 
         SSLEngine             on
-        SSLCertificateFile "/etc/letsencrypt/live/HTTPS_DOMAIN/fullchain.pem"
-        SSLCertificateKeyFile "/etc/letsencrypt/live/HTTPS_DOMAIN/privkey.pem"
+        SSLCertificateFile "/etc/letsencrypt/live/#HTTPS_DOMAIN#/fullchain.pem"
+        SSLCertificateKeyFile "/etc/letsencrypt/live/#HTTPS_DOMAIN#/privkey.pem"
         SSLCipherSuite        EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
         SSLProtocol           All -SSLv2 -SSLv3
         SSLHonorCipherOrder   On
@@ -51,14 +51,8 @@ files:
       /var/log/letsencrypt/letsencrypt.log
 
 container_commands:
-# installs certbot
   10_stop_apache:
     command: "sudo killall httpd ; sleep 3"
-  10_replace_placeholders:
-    command: |
-      SED_EXPRESSION='s/HTTPS_DOMAIN/'$HTTPS_DOMAIN'/g'
-      echo $SED_EXPRESSION
-      sed -i -e $SED_EXPRESSION /etc/httpd/conf.d/ssl.conf
   20_start_apache:
     command: |
       sudo httpd -k start
