Added deployment.md and Dockerfile for production with Apache httpd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
 
   sample:
-    container_name: sample
+    container_name: web-dev
     build:
       context: .
       dockerfile: Dockerfile
