--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,11 @@
 .env.production.local
 package-lock.json
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
