Specify ssl guides

--- a/bin/aws-eb/config/https-instance.config
+++ b/bin/aws-eb/config/https-instance.config
@@ -26,8 +26,8 @@ files:
         </Proxy>
 
         SSLEngine             on
-        SSLCertificateFile "/etc/letsencrypt/live/#HTTPS_DOMAIN#/fullchain.pem"
-        SSLCertificateKeyFile "/etc/letsencrypt/live/#HTTPS_DOMAIN#/privkey.pem"
+        SSLCertificateFile "#CERTIFICATE_PATH_PEM (Eg."/etc/letsencrypt/live/#HTTPS_DOMAIN#/fullchain.pem")#""
+        SSLCertificateKeyFile "#KEY_PATH_PEM (Eg."/etc/letsencrypt/live/#HTTPS_DOMAIN#/privkey.pem")#"
         SSLCipherSuite        EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
         SSLProtocol           All -SSLv2 -SSLv3
         SSLHonorCipherOrder   On
