--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/views -o src/resources/css --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
+    "test": "react-scripts test",
     "deploy": "node ./bin/www",
     "eject": "react-scripts eject"
   },
   "private": true,
   "dependencies": {
     "body-parser": "1.19.0",
-    "debug": "4.1.1",
+    "debug": "4.3.1",
     "express": "4.17.1",
     "log": "6.0.0",
     "morgan": "1.10.0",
@@ -22,36 +23,40 @@
   },
   "devDependencies": {
     "@apollo/react-hooks": "4.0.0",
-    "@material-ui/core": "4.11.0",
+    "@material-ui/core": "4.11.3",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.7.1",
     "apollo-boost": "0.4.9",
     "apollo-cache-inmemory": "1.6.6",
-    "bootstrap": "4.5.2",
+    "bootstrap": "4.6.0",
     "classnames": "2.2.6",
-    "cross-fetch": "3.0.5",
-    "datatables.net": "1.10.21",
-    "formik": "2.1.5",
-    "graphql": "15.3.0",
+    "cross-fetch": "3.0.6",
+    "datatables.net": "1.10.23",
+    "eslint": "5.0.0",
+    "formik": "2.2.6",
+    "graphql": "15.5.0",
     "jquery": "3.5.1",
     "node-sass-chokidar": "1.5.0",
     "npm-run-all": "4.1.5",
-    "react": "16.13.1",
-    "react-app-polyfill": "1.0.6",
-    "react-bootstrap": "1.3.0",
+    "react": "17.0.1",
+    "react-app-polyfill": "2.0.0",
     "react-css-modules": "4.7.11",
-    "react-dom": "16.13.1",
-    "react-fetch-hook": "1.8.3",
-    "react-ga": "3.1.2",
+    "react-dom": "17.0.1",
+    "react-fetch-hook": "1.8.5",
+    "react-ga": "3.3.0",
     "react-load-script": "0.0.6",
     "react-popup": "0.10.0",
-    "react-redux": "7.2.1",
+    "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.2",
     "react-scripts-cssmodules": "1.1.50",
-    "react-svg": "11.0.38",
+    "react-svg": "11.2.4",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "web-vitals": "1.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
