--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "reactjs-reference",
   "version": "0.1.0",
   "scripts": {
-    "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/components -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/views -o src/resources/css/seed/examples",
+    "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/components -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
-    "watch-css": "npm run build-css && node-sass-chokidar src/views -o src/resources/css --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/views -o src/resources/css --watch --recursive && node-sass-chokidar src/resources/styles -o src/resources/css --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "test": "react-scripts test --watchAll=false",
