:shower::shower: Remove redux support

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "bootstrap": "4.6.0",
     "classnames": "2.2.6",
     "cross-fetch": "3.0.6",
-    "datatables.net": "1.10.24",
     "eslint": "7.21.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "formik": "2.2.6",
@@ -46,16 +45,10 @@
     "react-fetch-hook": "1.8.5",
     "react-ga": "3.3.0",
     "react-load-script": "0.0.6",
-    "react-popup": "0.10.0",
-    "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "react-svg": "12.1.0",
-    "redux": "4.0.5",
-    "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0",
-    "web-vitals": "1.1.0"
+    "react-svg": "12.1.0"
   },
   "eslintConfig": {
     "extends": [
