:+1: Include jsdoc support

--- a/.seedignore
+++ b/.seedignore
@@ -7,6 +7,7 @@ SeedExport.json
 SeedModeling.mdj
 build
 node_modules
+public/docs/*
 src/seed/redux/actions/*
 src/seed/redux/reducers/*
 src/seed/gql/*
