--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/components -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
     "build-js": "react-scripts build",
+    "build-docs": "jsdoc -u ./docs ./src -d ./public/docs -t ./node_modules/docdash -c ./docs/config.json --readme README.md",
     "build": "npm-run-all build-css build-js",
     "watch-css": "npm run build-css && node-sass-chokidar src/views -o src/resources/css --watch --recursive && node-sass-chokidar src/resources/styles -o src/resources/css --watch --recursive",
     "start-js": "react-scripts start",
@@ -32,11 +33,13 @@
     "bootstrap": "4.6.0",
     "classnames": "2.2.6",
     "cross-fetch": "3.1.2",
+    "docdash": "1.2.0",
     "eslint": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "formik": "2.2.6",
     "graphql": "15.5.0",
     "jquery": "3.6.0",
+    "jsdoc": "3.6.6",
     "node-sass-chokidar": "1.5.0",
     "npm-run-all": "4.1.5",
     "react": "17.0.1",
