--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/components -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
     "build-js": "react-scripts build",
-    "build-docs": "jsdoc -u ./docs ./src -d ./public/docs -t ./node_modules/docdash -c ./docs/config.json --readme README.md",
+    "build-docs": "jsdoc ./src -c ./bin/config/docs/config.json --readme README.md",
     "build": "npm-run-all build-css build-js",
     "watch-css": "npm run build-css && node-sass-chokidar src/views -o src/resources/css --watch --recursive && node-sass-chokidar src/resources/styles -o src/resources/css --watch --recursive",
     "start-js": "react-scripts start",
