--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactjs-reference",
   "version": "0.1.0",
   "scripts": {
-    "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/components -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
+    "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/helpers -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
     "build-js": "react-scripts build",
     "build-docs": "jsdoc ./src -c ./bin/config/docs/config.json --readme README.md",
     "build": "npm-run-all build-css build-js",
