Remove pmd from codacy

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,11 +1,16 @@
 ---
+engines:
+  pmd:
+    exclude_paths:
+      - "src/**"
+
 exclude_paths:
   - "**.md"
   - "**.css"
   - "**.scss"
-  - "public/**/*"
-  - "build/**/*"
-  - "src/tests/**/*"
-  - "src/seed/tests/**/*"
-  - "node_modules/**/*"
-  - "coverage/**/*"
+  - "public/**"
+  - "build/**"
+  - "src/tests/**"
+  - "src/seed/tests/**"
+  - "node_modules/**"
+  - "coverage/**"
