Test codacy analysis action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,26 @@ on:
       - '*'
   
 jobs:
-  build-test:
+  review-code:
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+
+      - name: "Analyzing with eslint"
+        uses: codacy/codacy-analysis-cli-action@master
+        with:
+          tool: eslint
+          force-file-permissions: true
+
+      - name: "Analyzing with jshint"
+        uses: codacy/codacy-analysis-cli-action@master
+        with:
+          tool: jshint
+          force-file-permissions: true
+
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
