--- a/bin/docker/docker-compose.dev.yml
+++ b/bin/docker/docker-compose.dev.yml
@@ -9,6 +9,6 @@ services:
     command: /bin/sh -c "npm start"
     volumes:
       - ../../.:/app
-      - /node_modules
+      - /app/node_modules
     ports:
       - "${REACTJS_PORT}:${REACTJS_PORT}"
