Change docker-compose names

--- a/.seedignore
+++ b/.seedignore
@@ -20,15 +20,16 @@ src/tests/*
 src/views/*
 src/resources/css/*
 src/seed/examples
+README.md
+package.json
+package-lock.json
+public/index.html
 ?.dockerignore
 ?.eslintrc
 ?.jshintrc
 ?Dockerfile
 ?jsconfig.json
 ?app.js
-?package.json
-?package-lock.json
-?README.md
 ?bin/docker/custom-setup.sh
 ?public/*
 ?src/index.css
