--- a/SeedSettings.json
+++ b/SeedSettings.json
@@ -2,5 +2,7 @@
   "extend": {
     "actions": []
   },
-  "platform": "reactjs"
+  "platform": "reactjs",
+  "project_description": "This repository holds a **reference** for the development of a **React.js App**",
+  "project_name": "ReactJS Reference"
 }
