--- a/bin/docker/docker-compose-dev.yml
+++ b/bin/docker/docker-compose-dev.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
 
-  reactjs:
+  reactjs_reference_reactjs:
     build:
       context: ../../.
       dockerfile: Dockerfile
