--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "reactjs-reference",
-  "version": "0.1.0",
+  "name": "reactjs_reference",
   "scripts": {
     "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/helpers -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
     "build-js": "react-scripts build",
