--- a/.seedignore
+++ b/.seedignore
@@ -31,6 +31,7 @@ public/index.html
 ?jsconfig.json
 ?app.js
 ?bin/docker/custom-setup.sh
+?bin/docker/docker.env
 ?public/*
 ?src/index.js
 ?src/resources/*
