--- a/bin/docker/docker-compose-dev.yml
+++ b/bin/docker/docker-compose-dev.yml
@@ -10,5 +10,7 @@ services:
     volumes:
       - ../../.:/app
       - /app/node_modules
+    env_file:
+      - docker.env
     ports:
       - "${REACTJS_PORT}:${REACTJS_PORT}"
