--- a/bin/docker/docker-compose.yml
+++ b/bin/docker/docker-compose.yml
@@ -13,6 +13,6 @@ services:
       - ../../.:/app
       - /app/node_modules
     env_file:
-      - .env
+      - docker.env
     ports:
       - "${REACTJS_PORT}:${REACTJS_PORT}"
