--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "build-css": "node-sass-chokidar src/views -o src/resources/css && node-sass-chokidar src/resources/styles -o src/resources/css && node-sass-chokidar src/components -o src/resources/css  && node-sass-chokidar src/seed/helpers -o src/resources/css/seed &&  node-sass-chokidar src/seed/examples/styles -o src/resources/css/seed/examples",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
-    "watch-css": "npm run build-css && node-sass-chokidar src/views -o src/resources/css --watch --recursive && node-sass-chokidar src/resources/styles -o src/resources/css --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "watch-css": "node-sass-chokidar src/views -o src/resources/css --watch --recursive && node-sass-chokidar src/resources/styles -o src/resources/css --watch --recursive",
+    "watch-js": "react-scripts start",
+    "watch": "npm-run-all -p watch-css watch-js",
+    "start": "npm-run-all -s build-css watch",
     "test": "react-scripts test --watchAll=false --silent",
     "coverage": "react-scripts test --watchAll=false --silent --coverage",
     "deploy": "node ./bin/www",
@@ -14,43 +15,43 @@
   },
   "private": true,
   "dependencies": {
-    "body-parser": "1.19.2",
-    "debug": "4.3.3",
-    "express": "4.17.3",
+    "body-parser": "1.20.0",
+    "debug": "4.3.4",
+    "express": "4.18.1",
     "log": "6.3.1",
     "morgan": "1.10.0",
     "serve-favicon": "2.5.0"
   },
   "devDependencies": {
     "@apollo/react-hooks": "4.0.0",
-    "@material-ui/core": "4.12.3",
-    "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.3",
-    "@testing-library/user-event": "13.5.0",
+    "@material-ui/core": "4.12.4",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "14.2.0",
     "apollo-boost": "0.4.9",
     "apollo-cache-inmemory": "1.6.6",
     "classnames": "2.3.1",
     "cross-fetch": "3.1.5",
     "docdash": "1.2.0",
-    "eslint": "8.10.0",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint": "8.16.0",
+    "eslint-plugin-react-hooks": "4.5.0",
     "formik": "2.2.9",
-    "graphql": "15.8.0",
+    "graphql": "16.5.0",
     "jquery": "3.6.0",
     "jsdoc": "3.6.10",
     "jshint": "2.13.4",
     "node-sass-chokidar": "1.5.0",
     "npm-run-all": "4.1.5",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
+    "react": "18.1.0",
     "react-app-polyfill": "3.0.0",
-    "react-dom": "17.0.2",
-    "react-fetch-hook": "1.8.5",
+    "react-dom": "18.1.0",
+    "react-fetch-hook": "1.9.5",
     "react-ga": "3.3.0",
     "react-load-script": "0.0.6",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.1"
   },
   "browserslist": [
     ">0.2%",
