Exclude examples from ci testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,4 @@ jobs:
         npm install
     - name: "Running tests"
       run: |
-        npm test
+        npm test -- --testPathIgnorePatterns=src/seed/examples
