:whale2 Update bin/scripts to docker-desktop

--- a/SeedSettings.json
+++ b/SeedSettings.json
@@ -2,6 +2,8 @@
   "extend": {
     "actions": []
   },
+  "last_build_date": "2022-07-09 19:51:57.127055",
+  "last_build_version": "0.4.92",
   "platform": "reactjs",
   "project_description": "This repository holds a **reference** for the development of a **React.js App**",
   "project_name": "ReactJS Reference"
