--- a/bin/jsdoc/config.json
+++ b/bin/jsdoc/config.json
@@ -11,7 +11,7 @@
     "default": {
       "staticFiles": {
         "include": [
-            "./bin/config/docs/static"
+            "./bin/jsdoc/static"
         ]
       }
     }
