--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.2.0",
     "react-fetch-hook": "1.9.5",
-    "react-ga": "3.3.1",
+    "react-ga4": "1.4.1",
     "react-load-script": "0.0.6",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
